[package]
name = "game-clip"
version = "0.1.0"
authors = ["AndrazWhileTrue <andraz@whiletrue.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify-rust = "4"
scrap = "0.5.0"
gifski = "1.4.3"
imgref = "1.9.1"
rgb = "0.8.27"