[package]
name = "game-clip"
version = "0.1.0"
authors = ["AndrazWhileTrue <andraz@whiletrue.com>"]
edition = "2018"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify-rust = "4"
scrap = "0.5.0"
gifski = "1.4.3"
imgref = "1.9.1"
rgb = "0.8.27"
chrono = "0.4.19"
device_query = "0.2.8"
yaml-rust = "0.4.5"